--- a/fitness-tracker/backend/.env
+++ b/fitness-tracker/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://fitnesstrackerdemo:1234@fitnesstracker.or5knvy.mongodb.net/?retryWrites=true&w=majority
+NODE_ENV=production
