--- a/fitness-tracker/package.json
+++ b/fitness-tracker/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
