--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {
     "loader-utils": ">=2.0.3",
-    "nth-check": ">=2.0.1"
+    "nth-check": ">=2.0.1",
+    "minimatch": ">=3.0.5"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,8 +22,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "loader-utils": ">=2.0.3",
-    "nth-check": ">=2.0.1"
-
+    "nth-check": ">=2.0.1",
+    "minimatch": ">=3.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
